Backend: Updated review retrieval with pagination and sort. Updated testing too.